# chadx

./: .gitignore  README.md  pyproject.toml  sample.env
app/: chadmin.py  chadxperience.py  chat.py  dependencies.py  main.py
app/exchange/: embedder.py  engine.py  models.py
app/internal/: admin.py
app/routers/: betas.py  chads.py  chadvertisers.py  embedder.py
